# ZGK-Projekt2

./: CMakeLists.txt
src/: CMakeLists.txt  Core.hpp  FpCameraManipulator.cpp  FpCameraManipulator.hpp  Input.cpp  Input.hpp  Ray.cpp  Ray.hpp  SkyBox.cpp  SkyBox.hpp  Source.cpp  Source.hpp  Sphere.cpp  Sphere.hpp  TextManager.cpp  TextManager.hpp  Time.cpp  Time.hpp  Utils.cpp  Utils.hpp
src/assets/: suzanne.mtl
